--- a/react-app/src/components/IndividualProduct.css
+++ b/react-app/src/components/IndividualProduct.css
@@ -2,7 +2,9 @@
     max-height: 600px;
     max-width: 700px;
     border-style: solid;
-    border-radius: 4px;
+    border-radius: 9px;
+    overflow: scroll;
+    
 }
 
 .individualImage {
