--- a/react-app/src/components/IndividualProduct.css
+++ b/react-app/src/components/IndividualProduct.css
@@ -11,3 +11,23 @@
     max-height: 350px;
     max-width: 420px;
 }
+
+.dotdotdotbtn {
+    background: none;
+	color: blue;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.Back {
+    background: none;
+	color: blue;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
