--- a/react-app/src/components/productListing.css
+++ b/react-app/src/components/productListing.css
@@ -4,12 +4,18 @@
     border-radius: 12px;
     display:flex;
     flex-wrap: wrap;
+    background-color: var(--secondary-background);
 }
 
 
 
-.listingImage {
+.listingImage  {
     max-width: 200px;
     max-height: 150px;
-    margin: 8px;
+    margin: 10px;
+    background-color: var(--secondary-background);
+}
+
+.productListing, .prices, .anchor{
+    background-color: var(--secondary-background);
 }
