--- a/react-app/src/components/productListing.css
+++ b/react-app/src/components/productListing.css
@@ -1,21 +1,76 @@
-.productsContainer {
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 12px;
-    display:flex;
-    flex-wrap: wrap;
-    background-color: var(--secondary-background);
+:root{
+    --main-background:#D4C093;
+    --secondary-background:#74c7e3;
+    --accent-one:#278FB8;
+    --accent-two:#a4b3bf;
+    --text-color:#4D4A54;
 }
 
 
+.productsContainer {
+  justify-content: center;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "grid-area-1 grid-area-2 grid-area-3"
+     "grid-area-4 grid-area-5 grid-area-6"
+     "grid-area-7 grid-area-8 grid-area-9"
+     "grid-area-10 grid-area-11 grid-area-12"
+     "grid-area-13 grid-area-14 grid-area-15";
+}
 
 .listingImage  {
-    max-width: 200px;
-    max-height: 150px;
-    margin: 10px;
-    background-color: var(--secondary-background);
+background-size: cover;
+background-position: center;
+background-repeat:no-repeat;
+ width:200px;
+ height:125px;
+ background-color:var(--secondary-background);
+  margin: 5px;
+  border-radius: 10px;
+}
+.productInfo, .prices, .title, .seeMore{
+  background-color:var(--secondary-background);
+  text-decoration:none;
+}
+.productInfo{
+text-decoration: none;
+  display: flex;
+flex-direction: column;
+  height: 150px;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+
+
 }
 
-.productListing, .prices, .anchor{
-    background-color: var(--secondary-background);
+.productCard{
+  z-index: 0;
+  position:initial;
+  text-decoration: none;
+  align-items: center;
+  justify-content: space-around;
+  display: flex;
+  width:300px;
+  height:150px;
+  border-radius: 10px;
+  color: var(--text-color);
+  opacity: 0.7;
+   background-color:var(--secondary-background);
+  font-size: 20px;
+  border: 2px solid var(--accent-one);
+  transition: opacity 0.25s ease-in-out;
+  cursor: pointer;
+  overflow: hidden;
+  margin: 5px;
+}
+
+.productCard:hover{
+ opacity: 1;
+ z-index: 20000;
+ width: 350px;
+ height:200px;
+ margin: -50px;
 }
