--- a/react-app/src/components/productListing.css
+++ b/react-app/src/components/productListing.css
@@ -24,8 +24,8 @@
 background-size: cover;
 background-position: center;
 background-repeat:no-repeat;
- width:200px;
- height:125px;
+ width:75%;
+ height:75%;
  background-color:var(--secondary-background);
   margin: 5px;
   border-radius: 10px;
@@ -42,8 +42,6 @@ flex-direction: column;
   align-items: center;
   justify-content: space-around;
   text-align: center;
-
-
 }
 
 .productCard{
