--- a/react-app/src/components/HomePage.css
+++ b/react-app/src/components/HomePage.css
@@ -1,14 +1,54 @@
+:root {
+  --main-background: #d4c093;
+  --secondary-background: #74c7e3;
+  --accent-one: #278fb8;
+  --accent-two: #a4b3bf;
+  --text-color: #4d4a54;
+}
+
+.homeWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .wishListContainer {
-    border-style: solid;
-    border-width: 3px;
-    border-radius: 12px;
-    display:flex;
-    flex-wrap: wrap;
-    background-color: var(--secondary-background);
+  border: 3px solid var(--accent-one);
+  border-radius: 12px;
+  display: flex;
+  flex-wrap: auto;
+  background-color: var(--secondary-background);
+  width: 900px;
+
+  justify-content: center;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "grid-area-1 grid-area-2 grid-area-3"
+    "grid-area-4 grid-area-5 grid-area-6"
+    "grid-area-7 grid-area-8 grid-area-9"
+    "grid-area-10 grid-area-11 grid-area-12"
+    "grid-area-13 grid-area-14 grid-area-15";
 }
 
 .individualWishListDiv {
-    max-width: 200px;
-    max-height: 150px;
-    margin: 10px;
+  max-width: 200px;
+  max-height: 150px;
+  margin: 10px;
+}
+.createButton{
+  background-color: var(--accent-one);
+  border: 2px solid var(--text-color);
+  border-radius: 10px;
+  padding: 5px 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin: 5px;
+  cursor: pointer;
+}
+.ModalComp{
+    background-color: #74c7e3;
 }
