--- a/react-app/src/components/IndividualWishlist.css
+++ b/react-app/src/components/IndividualWishlist.css
@@ -1,4 +1,48 @@
-.wishlistproductimage {
-    max-width: 100px;
-    max-height: 90px;
+
+.wishlistContainer{
+  justify-content: center;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "grid-area-1 grid-area-2 grid-area-3"
+     "grid-area-4 grid-area-5 grid-area-6"
+     "grid-area-7 grid-area-8 grid-area-9"
+     "grid-area-10 grid-area-11 grid-area-12"
+     "grid-area-13 grid-area-14 grid-area-15";
+}
+
+ .productCard{
+      z-index: 0;
+  position:initial;
+  text-decoration: none;
+  align-items: center;
+  justify-content: space-around;
+  display: flex;
+  width:300px;
+  height:150px;
+  border-radius: 10px;
+  color: var(--text-color);
+  opacity: 0.9;
+   background-color:var(--secondary-background);
+  font-size: 20px;
+  border: 2px solid var(--accent-one);
+  transition: opacity 0.25s ease-in-out;
+  cursor: pointer;
+  overflow: hidden;
+  margin: 5px;
+ }
+.productImage  {
+background-size: cover;
+background-position: center;
+background-repeat:no-repeat;
+ width:150px;
+ height: 100px;
+ background-color:var(--secondary-background);
+  margin: 5px;
+  border-radius: 10px;
+}
+.productCard{
+    display: flex;
+    flex-direction: column;
 }
