--- a/react-app/src/components/IndividualWishlist.css
+++ b/react-app/src/components/IndividualWishlist.css
@@ -1,3 +1,10 @@
+:root{
+    --main-background:#D4C093;
+    --secondary-background:#74c7e3;
+    --accent-one:#278FB8;
+    --accent-two:#a4b3bf;
+    --text-color:#4D4A54;
+}
 
 .wishlistContainer{
   justify-content: center;
@@ -12,37 +19,80 @@
      "grid-area-13 grid-area-14 grid-area-15";
 }
 
- .productCard{
+ .productCardWL{
       z-index: 0;
   position:initial;
   text-decoration: none;
   align-items: center;
   justify-content: space-around;
   display: flex;
+  flex-direction: column;
   width:300px;
-  height:150px;
+  height:200px;
   border-radius: 10px;
   color: var(--text-color);
   opacity: 0.9;
-   background-color:var(--secondary-background);
   font-size: 20px;
   border: 2px solid var(--accent-one);
   transition: opacity 0.25s ease-in-out;
-  cursor: pointer;
-  overflow: hidden;
+
+  overflow: auto;
   margin: 5px;
+  background-size: cover;
+background-position: center;
+background-repeat:no-repeat;
  }
-.productImage  {
+
+ .productTitle{
+     border-radius: 10px;
+    padding: 2px;
+    border: 2px solid var(--accent-one);
+    background-color: var(--secondary-background);
+    color: black;
+}
+
+
+/* .productImage  {
+
 background-size: cover;
 background-position: center;
 background-repeat:no-repeat;
- width:150px;
- height: 100px;
- background-color:var(--secondary-background);
+ width: 100%;
+ height: 150px;
   margin: 5px;
   border-radius: 10px;
-}
-.productCard{
+} */
+.productInfo{
+    background-color: transparent;
+    color: black;
+    text-align: center;
+    height: 200px;
+    width: 250px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+
+}
+
+.productLink{
+   height: 50%;
+    width: 100%;
+    background-color: transparent;
+}
+.productPrice{
+    border-radius: 10px;
+    padding: 2px;
+    border: 2px solid var(--accent-one);
+    background-color: var(--secondary-background);
+}
+
+.productButtonContainer{
+background-color: transparent;
+}
+.productCardWL:hover{
+    opacity: 1;
+    z-index: 2000;
+    width: 350px;
+    height: 250px;
+    margin: -25px;
 }
