--- a/react-app/src/components/productListing.css
+++ b/react-app/src/components/productListing.css
@@ -38,7 +38,8 @@
   background-size: cover;
   background-position: center;
   background-repeat:no-repeat;
-  z-index: 0;
+  padding: 10px;
+  
   justify-content: space-between;
   text-decoration: none;
   align-items: center;
