--- a/react-app/src/components/Nav.css
+++ b/react-app/src/components/Nav.css
@@ -11,6 +11,7 @@
   flex-direction: row;
   justify-content: space-around;
   background-color: var(--accent-one);
+  align-items: center;
 }
 
 .NavBar ul li {
@@ -61,6 +62,8 @@
 }
 
 .Footer {
+  display: flex;
+  justify-content: space-around;
   background-color: var(--accent-one);
   max-height: 50px;
   text-decoration: none;
@@ -72,4 +75,36 @@
   position: fixed;
   bottom: 0pt;
   left: 0pt;
+  text-align: center;
+}
+.footerBox{
+  width:150px;
+  background-color: var(--accent-one);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footerTitle{
+  border-bottom: 2px solid var(--accent-two);
+  background-color: var(--accent-one);
+}
+.footerLinks{
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  background-color: var(--accent-one);
+}
+
+.footerLink{
+
+  background-color: var(--secondary-background);
+  border: 2px solid var(--text-color);
+  border-radius: 10px;
+  padding: 5px 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  margin: 5px;
+  cursor: pointer;
 }
