--- a/react-app/src/components/auth/forms.css
+++ b/react-app/src/components/auth/forms.css
@@ -7,18 +7,14 @@
 
 }
 
-
-
-
 .formWrapper{
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .loginFormDiv{
-    height: 200px;
+    height: 250px;
     max-width: 500px;
     background-color: #74c7e3;
     display: flex;
@@ -29,7 +25,7 @@
     margin: 25px;
 }
 .signupFormDiv{
-    height: 275px;
+    height: 290px;
     max-width: 500px;
     background-color: #74c7e3;
     display: flex;
@@ -70,3 +66,8 @@
      width: 50%;
      text-align: center;
  }
+.formLink{
+    background-color: var(--secondary-background);
+    color:var(--accent-one);
+    margin: 12px;
+}
