fixed friday morning bugs

--- a/react-app/src/components/addToWL.css
+++ b/react-app/src/components/addToWL.css
@@ -43,3 +43,7 @@ background-color:var(--accent-one);
 text-align: center;
 border-bottom: 2px solid var(--secondary-background);
 }
+
+.noWishlistMsg {
+  background-color:var(--accent-one);
+}
