--- a/react-app/src/components/IndividualProduct.css
+++ b/react-app/src/components/IndividualProduct.css
@@ -60,6 +60,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+    margin:1rem;
 }
 .button{
   background-color: var(--accent-one);
