--- a/react-app/src/components/productListing.css
+++ b/react-app/src/components/productListing.css
@@ -9,6 +9,7 @@
 
 .productsContainer {
   justify-content: center;
+  margin-top: 30px;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto;
