--- a/react-app/src/components/Root.css
+++ b/react-app/src/components/Root.css
@@ -12,11 +12,15 @@
     background-color: var(--secondary-background);
 }
 .rootWrapper{
-
+    width:100%;
+    height:750px;
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    background-image: url(https://images.unsplash.com/photo-1472851294608-062f824d29cc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin:0 auto;
 }
 .login-Signup{
     padding: 25px;
