--- a/react-app/src/components/HomePage.css
+++ b/react-app/src/components/HomePage.css
@@ -76,6 +76,7 @@ height:400px;
   background-color:var(--accent-one);
   border-radius: 10px;
   overflow: hidden;
+  flex-direction: column;
 }
 .createButton{
   background-color: var(--accent-one);
@@ -119,4 +120,8 @@ a{
     padding: 5px;
     margin: 5px;
     z-index: 500;
+}
+.deletewishlistbtn{
+  margin-top: 30px;
+  margin-bottom:0;
 }
